--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@ a {
 
   padding: 10px 15px;
   margin: 0 auto;
+  -webkit-backdrop-filter: blur(6px);
   backdrop-filter: blur(6px);
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.5), 0 0 4px rgba(0, 0, 0, 0.5), 0 0 6px rgba(0, 0, 0, 0.5);
   background-color: rgba(0, 0, 0, 0.5);
@@ -181,6 +182,7 @@ a {
   transition: 0.1s ease;
 
   backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
   background-color: rgba(0, 0, 0, 0.5);
   padding-top: 130px;
 }
