--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ a {
 }
 .header {
   width: 80%;
+  max-width: 1200px;
 
   position: relative;
   z-index: 10;
@@ -87,13 +88,15 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  transition: 0.6s ease;
 
-  padding: 10px 15px;
+  padding: 15px;
   margin: 0 auto;
   -webkit-backdrop-filter: blur(6px);
   backdrop-filter: blur(6px);
-  box-shadow: 0 0 2px rgba(0, 0, 0, 0.5), 0 0 4px rgba(0, 0, 0, 0.5), 0 0 6px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 2px rgba(255, 255, 255, 0.5), 0 0 4px rgba(255, 255, 255, 0.5), 0 0 6px rgba(255, 255, 255, 0.5);
   background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 0 0 5px 5px;
 }
 
 .header.hide
@@ -102,8 +105,16 @@ a {
 }
 .logo {
   color: #fff;
+  cursor: pointer;
+  transition: 0.3s ease;
 }
 
+.burger.active {
+  box-shadow: 0 0 2px rgba(255, 255, 255, 0.5), 0 0 4px rgba(255, 255, 255, 0.5), 0 0 6px rgba(255, 255, 255, 0.5);
+  border-radius: 2px;
+  background-color: #fff;
+  transform: rotateY(180deg);
+}
 .burger {
   width: 30px;
   height: 30px;
@@ -111,6 +122,7 @@ a {
   position: relative;
   z-index: 11;
   cursor: pointer;
+  transition: 0.3s ease;
 
   display: flex;
   align-items: center;
@@ -146,6 +158,7 @@ a {
   top: 0;
   transform: rotate(45deg);
   box-shadow: 0 0 2px #fff;
+  background-color: #000;
 }
 .burger_items:before {
   top: -7px;
@@ -156,6 +169,7 @@ a {
   top: 0;
   transform: rotate(-45deg);
   box-shadow: 0 0 2px #fff;
+  background-color: #000;
 }
 .burger_items:after {
   top: 7px;
@@ -164,37 +178,104 @@ a {
 .nav.active {
   opacity: 1;
   pointer-events: auto;
+  transform: translate(-50%, 0%);
+  box-shadow: 0 0 2px rgba(255, 255, 255, 0.5), 0 0 4px rgba(255, 255, 255, 0.5), 0 0 6px rgba(255, 255, 255, 0.5);
 }
 .nav {
   width: 100%;
-  height: 100vh;
+  max-width: 650px;
 
   position: fixed;
   z-index: 9;
   top: 0;
-  left: 0;
+  left: 50%;
+  transform: translate(-50%, -100%);
   opacity: 0;
   pointer-events: none;
 
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  transition: 0.3s ease;
+  transition: 0.6s ease;
 
   backdrop-filter: blur(6px);
   -webkit-backdrop-filter: blur(6px);
   background-color: rgba(0, 0, 0, 0.5);
-  padding-top: 130px;
+  padding: 70px 0 30px;
+  border-radius: 0 0 5px 5px;
 }
 
 
 .nav_links.active {
-  color: #2368a1;
-  text-shadow: 0 0 2px #2368a1;
+  text-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff;
 }
 .nav_links {
-  width: 100%;
   color: #fff;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-  padding: 10px 0 10px 40px;
+  text-align: center;
+  transition: 0.3s ease;
+
+  padding: 10px 0;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+@media (min-width: 768px) {
+  /* LOGO */
+  .logo:hover {
+    text-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff;
+  }
+
+  /* NAV */
+  .nav {
+    width: 70%;
+
+    position: static;
+    opacity: 1;
+    transform: translate(0);
+    pointer-events: auto;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    transition: 0.6s ease;
+
+    backdrop-filter: none;
+    -webkit-backdrop-filter: none;
+    background: none;
+    padding: 0;
+    border-radius: none;
+  }
+  .nav_links {
+    color: #fff;
+    text-align: center;
+
+    padding: 0;
+  }
+  .nav_links:hover {
+    text-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff;
+  }
+
+  .burger {
+    display: none;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
