--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,7 @@ a {
   transform: translate(-50%, -50%);
   opacity: 0;
   pointer-events: none;
+  overflow: hidden;
 
   display: flex;
   flex-direction: column;
@@ -210,15 +211,21 @@ a {
 
 .nav_links.active {
   text-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 .nav_links {
+  width: 100%;
+
   color: #fff;
   text-align: center;
   transition: 0.3s ease;
 
   padding: 10px 0;
 }
-
+.nav_links:hover {
+  text-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff;
+  background-color: rgba(255, 255, 255, 0.5);
+}
 
 
 
@@ -326,9 +333,23 @@ a {
 
 
 @media (min-width: 768px) {
+  /* HEADER */
+  .header {
+    padding: 0;
+    overflow: hidden;
+  }
+
+  /* LOGO */
+  .logo {
+    margin-left: 15px;
+  }
+  .logo:hover {
+    text-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff;
+  }
+
   /* NAV */
   .nav {
-    width: 70%;
+    width: 80%;
 
     position: static;
     opacity: 1;
@@ -344,13 +365,17 @@ a {
     -webkit-backdrop-filter: none;
     background: none;
     padding: 0;
-    border-radius: none;
+    border-radius: 0;
   }
   .nav_links {
     color: #fff;
     text-align: center;
 
-    padding: 0;
+    padding: 15px 0;
+  }
+  .nav_links:hover {
+    text-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff;
+    background-color: rgba(255, 255, 255, 0.5);
   }
 
   .burger {
@@ -364,11 +389,6 @@ a {
 
 
 @media (min-width: 1024px) {
-  /* LOGO */
-  .logo:hover {
-    text-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff;
-  }
-
   /* NAV */
   .nav {
     width: 70%;
@@ -393,10 +413,6 @@ a {
     color: #fff;
     text-align: center;
 
-    padding: 0;
-  }
-  .nav_links:hover {
-    text-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff;
   }
 
   .burger {
