--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ a {
   display: none;
 
   position: absolute;
-  z-index: 2;
+  z-index: 3;
   top: 0;
   bottom: 0;
   left: 0;
@@ -260,7 +260,6 @@ a {
 
   text-align: center;
   color: #fff;
-  text-shadow: 0 0 2px #fff, 0 0 4px #fff;
   text-transform: uppercase;
   transition: 0.3s ease;
 
@@ -270,11 +269,42 @@ a {
   -webkit-backdrop-filter: blur(6px);
   border-radius: 5px;
   box-shadow: 0 0 2px #fff inset, 0 0 4px #fff inset;
+  animation: blink_shadow 0.6s ease;
+  animation-delay: 2s;
 }
 .intro_button:hover {
   background-color: rgba(255, 255, 255, 0.3);
   box-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff;
+  text-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff;
 }
+@keyframes blink_shadow {
+  0% {
+    text-shadow: none;
+    background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 2px #fff inset, 0 0 4px #fff inset;
+  }
+  25% {
+    text-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff;
+    background-color: rgba(255, 255, 255, 0.3);
+    box-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff;
+  }
+  50% {
+    text-shadow: none;
+    background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 2px #fff inset, 0 0 4px #fff inset;
+  }
+  75% {
+    text-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff;
+    background-color: rgba(255, 255, 255, 0.3);
+    box-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff;
+  }
+  100% {
+    text-shadow: none;
+    background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 2px #fff inset, 0 0 4px #fff inset;
+  }
+}
+
 
 
 
