--- a/css/style.css
+++ b/css/style.css
@@ -232,7 +232,7 @@ a {
 /* INTRO_CONTENT */
 .intro_content {
   width: 100%;
-  max-width: 500px;
+  max-width: 550px;
 
   position: absolute;
   z-index: 2;
@@ -261,28 +261,23 @@ a {
   text-align: center;
   color: #fff;
   text-transform: uppercase;
-  transition: 0.3s ease !important;
+  transition: 0.3s ease;
 
   padding: 15px;
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(6px);
   -webkit-backdrop-filter: blur(6px);
   border-radius: 5px;
-  box-shadow: 0 0 2px #fff inset, 0 0 4px #fff inset;
-  animation: blink_shadow 2s ease;
+  box-shadow: 0 0 2px #fff, 0 0 4px #fff;
+  animation: blink_shadow 2s infinite ease;
   animation-delay: 2s;
   margin-bottom: 30px;
-}
-.intro_button:hover {
-  background-color: rgba(255, 255, 255, 0.3);
-  box-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff;
-  text-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff;
 }
 @keyframes blink_shadow {
   0% {
     text-shadow: none;
     background-color: rgba(0, 0, 0, 0.5);
-    box-shadow: 0 0 2px #fff inset, 0 0 4px #fff inset;
+    box-shadow: 0 0 2px #fff, 0 0 4px #fff;
   }
   50% {
     text-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff;
@@ -292,7 +287,7 @@ a {
   100% {
     text-shadow: none;
     background-color: rgba(0, 0, 0, 0.5);
-    box-shadow: 0 0 2px #fff inset, 0 0 4px #fff inset;
+    box-shadow: 0 0 2px #fff, 0 0 4px #fff;
   }
 }
 
@@ -429,6 +424,11 @@ a {
 
   .burger {
     display: none;
+  }
+
+  /* INTRO_CONTENT */
+  .intro_title {
+    font-size: 40px;
   }
 
 
