--- a/css/style.css
+++ b/css/style.css
@@ -37,14 +37,15 @@ a {
   display: block;
 }
 .hide_background {
+  width: 100%;
+  height: 100vh;
+
   display: none;
 
   position: fixed;
   z-index: 3;
   top: 0;
-  bottom: 0;
   left: 0;
-  right: 0;
 }
 
 /* INTRO */
