--- a/css/style.css
+++ b/css/style.css
@@ -207,7 +207,7 @@ a {
   backdrop-filter: blur(6px);
   -webkit-backdrop-filter: blur(6px);
   background-color: rgba(0, 0, 0, 0.5);
-  padding: 75px 0 0;
+  padding: 75px 0 30px;
   border-radius: 5px;
 }
 
