--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,6 @@ a {
 
   background: url(../img/back/1.jpeg) center no-repeat;
   background-size: cover;
-  background-attachment: fixed !important;
 }
 .intro:after {
   position: absolute;
@@ -501,6 +500,10 @@ a {
 
 
 @media (min-width: 1024px) {
+  /* INTRO */
+  .intro {
+    background-attachment: fixed;
+  }
   /* NAV */
   .nav {
     width: 70%;
