--- a/css/style.css
+++ b/css/style.css
@@ -402,8 +402,7 @@ a {
 .text {
   color: #fff;
   font-size: 15px;
-  text-align: justify;
-  text-indent: 30px;
+  text-align: center;
 
   margin-bottom: 15px;
 }
@@ -442,8 +441,6 @@ a {
   max-width: 600px;
 
   text-align: center;
-  transform: scale(1);
-  transition: 0.1s ease;
 
   box-shadow: 0 0 2px #fff inset, 0 0 4px #fff inset, 0 0 6px #fff inset;
   border-radius: 5px;
@@ -453,6 +450,92 @@ a {
 .universe_link {
   text-transform: capitalize;
 }
+
+
+
+
+/* WAR_HEROES */
+.war_heroes {
+  width: 100%;
+
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-content: center;
+  gap: 50px;
+  perspective: 1300px;
+  perspective-origin: top;
+
+  margin: 0 auto;
+  padding: 50px 15px;
+  background-color: #04071b;
+}
+
+.war_heroes_content {
+  width: 100%;
+  max-width: 600px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  margin: 0 auto;
+}
+
+.war_heroes_image {
+  width: 100%;
+  max-width: 200px;
+  height: 250px;
+
+  position: relative;
+  z-index: 2;
+
+  overflow: hidden;
+
+  border-radius: 5px;
+  margin: 0 auto;
+  animation: rotate_y 3s infinite linear;
+  box-shadow: 0 0 10px #fff;
+}
+.war_heroes_image:after {
+  width: 100%;
+  height: 100%;
+
+  position: absolute;
+  content: '';
+  z-index: 1;
+  top: 0;
+  left: 0;
+
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.war_heroes_image img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+@keyframes rotate_y {
+  0% {
+    transform: rotateY(0);
+  }
+  25% {
+    transform: rotateY(-90deg);
+  }
+  50% {
+    transform: rotateY(-180deg);
+  }
+  75% {
+    transform: rotateY(-270deg);
+  }
+  100% {
+    transform: rotateY(-360deg);
+  }
+}
+
+
+
+
 
 
 
@@ -468,10 +551,11 @@ a {
 
   /* LOGO */
   .logo {
-    margin-left: 15px;
+    padding: 15px;
   }
   .logo:hover {
     text-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff;
+    background-color: rgba(255, 255, 255, 0.5);
   }
 
   /* NAV */
@@ -524,9 +608,18 @@ a {
   }
 
   .text {
-    text-indent: 0;
     text-align: center;
   }
+
+  /* WAR_HEROES */
+  .war_heroes {
+    display: grid;
+    grid-template-columns: repeat(2, 350px);
+    gap: 0;
+    justify-content: center;
+    align-items: center;
+  }
+
 }
 
 
@@ -587,6 +680,14 @@ a {
   /* UNIVERSE */
   .universe_content:hover {
     transform: scale(1.04) !important;
+  }
+
+  /* WAR_HEROES */
+  .war_heroes {
+    display: grid;
+    grid-template-columns: repeat(2, 400px);
+    gap: 0;
+    justify-content: center;
   }
 }
 
