--- a/css/style.css
+++ b/css/style.css
@@ -468,7 +468,7 @@ a {
   -webkit-perspective-origin: top;
 
   margin: 0 auto;
-  padding: 50px 15px;
+  padding: 50px 15px 70px;
   background-color: #04071b;
 }
 
