--- a/css/style.css
+++ b/css/style.css
@@ -74,19 +74,23 @@ a {
 
 
 /* HEADER */
-.header.hide {
+.header {
+  width: 100%;
+
+  position: fixed;
+  z-index: 14;
+  top: 5px;
+}
+
+.header.hide
+.header_content {
   background: none;
   backdrop-filter: none;
   box-shadow: none;
 }
-.header {
+.header_content {
   width: 90%;
   max-width: 1200px;
-
-  position: fixed;
-  z-index: 14;
-  left: 5%;
-  top: 5px;
 
   display: flex;
   justify-content: space-between;
@@ -184,21 +188,20 @@ a {
 .nav.active {
   opacity: 1;
   pointer-events: auto;
-  transform: translate(-50%, 0%);
+  transform: translate(-50%, 0);
   box-shadow: 0 0 2px rgba(255, 255, 255, 0.5) inset, 0 0 4px rgba(255, 255, 255, 0.5) inset, 0 0 6px rgba(255, 255, 255, 0.5) inset;
 }
 .nav {
-  width: 100%;
+  width: 90%;
   max-width: 650px;
 
   position: fixed;
   z-index: 9;
   top: 0;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -30%);
   opacity: 0;
   pointer-events: none;
-  overflow: hidden;
 
   display: flex;
   flex-direction: column;
@@ -208,6 +211,7 @@ a {
   -webkit-backdrop-filter: blur(6px);
   background-color: rgba(0, 0, 0, 0.5);
   padding: 75px 0 30px;
+  margin: 0 auto;
   border-radius: 5px;
 }
 
@@ -538,6 +542,62 @@ a {
 
 
 
+/* FOOTER */
+.footer {
+  width: 100%;
+
+  position: relative;
+
+  padding: 30px 0;
+  background-color: #04071b;
+}
+
+.footer_content {
+  width: 90%;
+  max-width: 1200px;
+
+  display: block;
+  transition: 0.6s ease;
+
+  padding: 15px;
+  margin: 0 auto;
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  box-shadow: 0 0 2px rgba(255, 255, 255, 0.5) inset, 0 0 4px rgba(255, 255, 255, 0.5) inset, 0 0 6px rgba(255, 255, 255, 0.5) inset;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+}
+
+.footer_items {
+  display: block;
+  margin-bottom: 15px;
+}
+.footer_items:last-child {
+  margin-bottom: 0;
+}
+
+.footer_icons_block {
+  display: flex;
+  justify-content: center;
+}
+
+.footer_icon {
+  font-size: 30px;
+  color: #fff;
+  transition: 0.3s ease;
+
+  margin: 0 10px;
+}
+.footer_icon:hover {
+  color: #fff;
+  text-shadow: 0 0 3px #fff;
+
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 5px;
+}
+
+
+
 
 
 
@@ -546,7 +606,7 @@ a {
 
 @media (min-width: 768px) {
   /* HEADER */
-  .header {
+  .header_content {
     padding: 0;
     overflow: hidden;
   }
@@ -568,6 +628,7 @@ a {
     opacity: 1;
     transform: translate(0);
     pointer-events: auto;
+    overflow: hidden;
 
     display: flex;
     flex-direction: row;
@@ -619,6 +680,13 @@ a {
     grid-template-columns: repeat(2, 350px);
     gap: 0;
     justify-content: center;
+    align-items: center;
+  }
+
+  /* FOOTER */
+  .footer_content {
+    display: flex;
+    justify-content: space-between;
     align-items: center;
   }
 
