--- a/css/style.css
+++ b/css/style.css
@@ -497,7 +497,6 @@ a {
   background-color: rgba(255, 255, 255, 0.3);
   backdrop-filter: blur(6px);
   -webkit-backdrop-filter: blur(6px);
-  animation: none;
 }
 .factions_icons_block {
   width: 40px;
@@ -514,21 +513,13 @@ a {
   margin: 0 auto;
   border-radius: 5px;
   box-shadow: 0 0 2px rgba(255, 255, 255, 0.5) inset, 0 0 4px rgba(255, 255, 255, 0.5) inset, 0 0 6px rgba(255, 255, 255, 0.5) inset;
-  animation: blink_icons_block 2s infinite ease;
 }
-@keyframes blink_icons_block {
-  0% {
-    box-shadow: 0 0 2px rgba(255, 255, 255, 0.5) inset, 0 0 4px rgba(255, 255, 255, 0.5) inset, 0 0 6px rgba(255, 255, 255, 0.5) inset;
-  }
-  50% {
-    box-shadow: 0 0 2px rgba(255, 255, 255) inset, 0 0 4px rgba(255, 255, 255) inset, 0 0 6px rgba(255, 255, 255) inset;
-    background-color: rgba(255, 255, 255, 0.3);
-  }
-  100% {
-    box-shadow: 0 0 2px rgba(255, 255, 255, 0.5) inset, 0 0 4px rgba(255, 255, 255, 0.5) inset, 0 0 6px rgba(255, 255, 255, 0.5) inset;
-  }
+.factions_icons_block:hover {
+  transform: rotate(0);
+  background-color: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
 }
-
 
 .factions_icons_block.active
 .factions_icons {
@@ -542,6 +533,11 @@ a {
 
   transform: rotate(45deg);
 }
+.factions_icons_block:hover
+.factions_icons {
+  transform: rotate(0);
+}
+
 
 .factions_info.active {
   display: block;
