--- a/css/style.css
+++ b/css/style.css
@@ -434,7 +434,8 @@ a {
 }
 .link:hover:before {
   box-shadow: 0 0 10px #fff inset;
-  left: 100%;
+  left: calc(100% + 5px);
+  transform: rotate(0) translateY(-50%);
 }
 
 
@@ -625,7 +626,7 @@ span {
   background-color: rgba(255, 255, 255, 0.15);
 }
 .factions_link:hover:before {
-  left: 100%;
+  left: calc(100% + 5px);
 }
 .factions_link:hover:after {
   width: calc(100% + 5px);
@@ -840,6 +841,125 @@ span {
 
 
 
+
+/* ROADMAP */
+.roadmap {
+  width: 100%;
+
+  background-color: #04071b;
+}
+
+.roadmap_content {
+  width: 100%;
+  max-width: 700px;
+
+  display: block;
+
+  padding: 50px 15px;
+  margin: 0 auto;
+}
+
+.roadmap_head {
+  width: 100%;
+  max-width: 700px;
+
+  display: flex;
+  overflow: hidden;
+
+  margin: 0 auto;
+  border-radius: 5px 5px 0 0;
+}
+
+.roadmap_head_title.active {
+  background-color: rgba(255, 255, 255, 0.15);
+  border-radius: 5px 5px 0 0;
+  text-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff;
+}
+.roadmap_head_title {
+  flex: 0 0 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: 0.3s ease;
+
+  font-size: 15px;
+  color: #fff;
+
+  padding: 10px 0;
+}
+.roadmap_head_title:hover {
+  text-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff;
+}
+
+.roadmap_items.active {
+  display: flex;
+  background-color: rgba(255, 255, 255, 0.15);
+}
+.roadmap_items {
+  width: 100%;
+
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+
+  border-radius: 0 0 5px 5px;
+  padding: 15px 10px;
+}
+
+.roadmap_items_text {
+  text-align: justify !important;
+
+  margin-top: 5px;
+  margin-bottom: 0;
+}
+.roadmap_items_text:first-child {
+  margin-bottom: 30px;
+  margin-top: 0;
+}
+
+.launch_content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  margin-bottom: 30px;
+}
+
+.launch_head {
+  flex: 0 0 15%;
+  height: 100%;
+
+  color: #fff;
+  text-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 30px 0;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.3);
+  box-shadow: 0 0 2px rgba(255, 255, 255, 0.5) inset, 0 0 4px rgba(255, 255, 255, 0.5) inset, 0 0 6px rgba(255, 255, 255, 0.5) inset;
+}
+
+.launch_body {
+  flex: 0 0 80%;
+}
+
+.roadmap_items_subtitle {
+  text-align: left;
+  margin-bottom: 5px;
+}
+
+.roadmap_span {
+  margin-bottom: 5px;
+}
+
+.roadmap_text {
+  text-align: justify !important;
+  margin-bottom: 30px;
+}
 
 
 
