--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
   margin: 0;
+  line-height: 1.3;
 }
 
 a {
@@ -881,7 +882,8 @@ span {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  transition: 0.3s ease;
+  transition: text-shadow 0.3s ease;
+  overflow: hidden !important;
 
   font-size: 15px;
   color: #fff;
@@ -959,6 +961,86 @@ span {
 .roadmap_text {
   text-align: justify !important;
   margin-bottom: 30px;
+}
+
+
+
+
+/* FAQ */
+.faq {
+  width: 100%;
+
+  background-color: #04071b;
+}
+
+.faq_content {
+  width: 100%;
+  max-width: 700px;
+
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+
+  margin: 0 auto;
+  padding: 50px 15px;
+}
+
+.faq_items {
+  width: 100%;
+  max-width: 500px;
+
+  margin: 0 auto;
+  border-radius: 5px;
+  box-shadow: 0 0 2px rgba(255, 255, 255, 0.5) inset, 0 0 4px rgba(255, 255, 255, 0.5) inset, 0 0 6px rgba(255, 255, 255, 0.5) inset;
+  background-color: rgba(255, 255, 255, 0.15);
+}
+
+.faq_head_title {
+  position: relative;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+
+  margin: 0;
+  padding: 10px 35px;
+}
+.faq_head_title.active:after {
+  transform: translateY(-50%) rotate(180deg);
+}
+.faq_head_title:after {
+  position: absolute;
+  content: '';
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  transition: 0.3s ease;
+
+  width: 15px;
+  height: 15px;
+
+  border-top: 10px solid #fff;
+  border-right: 10px solid transparent;
+  border-left: 10px solid transparent;
+  border-radius: 5px;
+}
+
+.faq_body_text.active {
+  display: block;
+}
+.faq_body_text {
+  display: none;
+
+  padding: 10px;
+}
+
+.faq_link {
+  color: #658a28;
+  text-shadow: 0 0 2px rgba(101, 138, 40, 0.5), 0 0 4px rgba(101, 138, 40, 0.5), 0 0 6px rgba(101, 138, 40, 0.5);
+}
+.faq_link:hover {
+  text-shadow: 0 0 2px #658a28, 0 0 4px #658a28, 0 0 6px #658a28;
 }
 
 
