--- a/css/style.css
+++ b/css/style.css
@@ -941,7 +941,7 @@ span {
   cursor: pointer;
 
   margin: 0;
-  padding: 10px 35px;
+  padding: 10px 0;
 }
 .faq_head_title.active:after {
   transform: translateY(-50%) rotate(180deg);
@@ -963,13 +963,12 @@ span {
   border-radius: 5px;
 }
 
-.faq_body_text.active {
-  display: block;
-}
 .faq_body_text {
-  display: none;
+  max-height: 0;
+  overflow: hidden;
+  transition: 0.3s ease;
 
-  padding: 10px;
+  margin: 0;
 }
 
 .faq_link {
